# simple_project

./: README.md  main.py  pyproject.toml
simple_project/: main.py
