[tool.poetry]
name = "simple_project"
version = "0.1.0"
description = "Простой проект для примера"
authors = ["Твое Имя <твой@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"