[tool.poetry]
name = "simple_project"
version = "0.1.0"
description = "Простой проект для примера"
authors = ["SkorEgor"]

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.scripts]
start = "simple_project.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"